Optimized calls to switch off HATEOAS links. Updated for Java 11.